--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -115,4 +115,137 @@ jobs:
   build-docs:
     if: false # << RIPRISTINATO COME RICHIESTO
     name: Build Documentation
-    runs-on: ubuntu-
+    runs-on: ubuntu-24.04
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      # ... resto degli step ...
+      - name: Build documentation with user script
+        run: |
+          chmod +x generate_sphinx_doc.sh
+          ./generate_sphinx_doc.sh
+      - name: Upload documentation artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: devildex-documentation-artifact
+          path: "build/html"
+
+  deploy-docs:
+    if: false # << RIPRISTINATO COME RICHIESTO
+    name: Deploy Documentation to GitHub Pages
+    needs: build-docs
+    runs-on: ubuntu-latest
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: devildex-documentation-artifact
+          path: "build/html"
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: "build/html"
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
+
+  build-rpm-package:
+    if: false # << RIPRISTINATO COME RICHIESTO
+    name: Build RPM Package
+    runs-on: ubuntu-latest
+    container:
+      image: fedora:latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      # ... resto degli step ...
+      - name: Build RPM package
+        run: |
+          VERSION=$(poetry version --short)
+          rpmbuild -ba packaging/rpm/devildex.spec --define "version $VERSION"
+      - name: Upload RPM Package artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: devildex-rpm-package
+          path: ~/rpmbuild/RPMS/noarch/*.rpm
+
+  create-and-upload-release:
+    name: Create and Upload Release
+    runs-on: ubuntu-latest
+    needs:
+      # NOTA: Le dipendenze per i job disabilitati sono state commentate.
+      # Rimuovi il commento quando riattivi il job corrispondente.
+      # - build-linux-wheel
+      # - build-macos-wheel
+      - build-windows-wheel # Attivo
+      # - build-deb-package
+      - build-package # Attivo
+      # - build-docs
+      # - build-rpm-package
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Calculate Next Version
+        id: calculate_version
+        env:
+          COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
+        run: |
+          RELEASE_TYPE=$(echo "$COMMIT_MESSAGE" | grep -oP 'release\(\K(patch|minor|major)(?=\)\:)' | head -1)
+          if [[ -z "$RELEASE_TYPE" ]]; then
+            echo "No release type found. Skipping release."
+            echo "next_version=null" >> "$GITHUB_OUTPUT"
+            exit 0
+          fi
+          CURRENT_VERSION=$(grep -oP 'version = "\K[0-9]+\.[0-9]+\.[0-9]+' pyproject.toml | head -1)
+          IFS='.' read -r -a V <<< "$CURRENT_VERSION"
+          major=${V[0]}; minor=${V[1]}; patch=${V[2]}
+          if [[ "$RELEASE_TYPE" == "major" ]]; then major=$((major + 1)); minor=0; patch=0;
+          elif [[ "$RELEASE_TYPE" == "minor" ]]; then minor=$((minor + 1)); patch=0;
+          elif [[ "$RELEASE_TYPE" == "patch" ]]; then patch=$((patch + 1)); fi
+          NEXT_VERSION="$major.$minor.$patch"
+          echo "Calculated next version: $NEXT_VERSION"
+          echo "next_version=$NEXT_VERSION" >> "$GITHUB_OUTPUT"
+
+      - name: Download all artifacts
+        if: steps.calculate_version.outputs.next_version != 'null'
+        uses: actions/download-artifact@v4
+        with:
+          path: dist
+
+      - name: Display downloaded artifacts structure
+        if: steps.calculate_version.outputs.next_version != 'null'
+        run: ls -R dist
+
+      - name: Create Release
+        id: create_release
+        if: steps.calculate_version.outputs.next_version != 'null'
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: v${{ steps.calculate_version.outputs.next_version }}
+          release_name: Release v${{ steps.calculate_version.outputs.next_version }}
+          body: "Release v${{ steps.calculate_version.outputs.next_version }}"
+          draft: false
+          prerelease: false
+
+      - name: Upload Release Assets
+        if: steps.calculate_version.outputs.next_version != 'null'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          # NOTA: Questo script caricherà solo gli artefatti dei job ATTIVI.
+          # Gli artefatti dei job con "if: false" non esisteranno e quindi non verranno caricati.
+          find dist -type f -print0 | while IFS= read -r -d $'\0' file; do
+            echo "Uploading asset: $file"
+            gh release upload v${{ steps.calculate_version.outputs.next_version }} "$file"
+          done
