--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -15,7 +15,7 @@ permissions:
 
 jobs:
   build-linux-wheel:
-    if: false # << RIPRISTINATO COME RICHIESTO
+    if: false
     name: Build Linux Wheel
     runs-on: ubuntu-24.04
     steps:
@@ -25,7 +25,29 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.13"
-      # ... resto degli step ...
+      - name: Install toml library
+        run: pip install toml
+      - name: Generate platform-specific pyproject.toml
+        run: python scripts/generate_pyproject_toml.py pyproject.toml ${{ runner.os|lower }} > pyproject.toml.tmp && mv pyproject.toml.tmp pyproject.toml
+      - name: Install Poetry and Export Plugin
+        run: |
+          pip install poetry
+          poetry self add poetry-plugin-export
+      - name: Install system dependencies for wxPython
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.1-dev libxtst-dev libnotify-dev \
+          python3-gi \
+          python3-gi-cairo \
+          python3-wxgtk4.0 \
+          python3-wxgtk-webview4.0
+      - name: Install dependencies with pip
+        env:
+          PIP_FIND_LINKS: "https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-24.04/"
+        run: |
+          poetry lock
+          poetry export -f requirements.txt --output requirements.txt --without-hashes
+          pip install -r requirements.txt
       - name: Build wheel
         run: poetry build --format wheel
       - name: Upload Linux Wheel artifact
@@ -35,13 +57,24 @@ jobs:
           path: dist/*.whl
 
   build-macos-wheel:
-    if: false # << RIPRISTINATO COME RICHIESTO
+    if: false
     name: Build macOS Wheel
     runs-on: macos-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      # ... resto degli step ...
+      - name: Set up Python 3.13
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
+      - name: Install toml library
+        run: pip install toml
+      - name: Generate platform-specific pyproject.toml
+        run: python scripts/generate_pyproject_toml.py pyproject.toml ${{ runner.os | lower }} > pyproject.toml.tmp && mv pyproject.toml.tmp pyproject.toml
+      - name: Install Poetry and Export Plugin
+        run: |
+          pip install poetry
+          poetry self add poetry-plugin-export
       - name: Build Wheel
         run: poetry build --format wheel
       - name: Upload Wheel Artifact
@@ -51,13 +84,21 @@ jobs:
           path: dist/*.whl
 
   build-windows-wheel:
-    # Questo job rimane attivo
     name: Build Windows Wheel
     runs-on: windows-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      # ... resto degli step ...
+      - name: Set up Python 3.13
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
+      - name: Install toml library
+        run: pip install toml
+      - name: Generate platform-specific pyproject.toml
+        run: python scripts/generate_pyproject_toml.py pyproject.toml ${{ runner.os | lower }} > pyproject.toml.tmp && mv pyproject.toml.tmp pyproject.toml
+      - name: Install Poetry
+        run: pip install poetry
       - name: Build Wheel
         run: poetry build --format wheel
       - name: Upload Wheel Artifact
@@ -67,13 +108,28 @@ jobs:
           path: dist/*.whl
 
   build-deb-package:
-    if: false # << RIPRISTINATO COME RICHIESTO
+    if: false
     name: Build Debian Package
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      # ... resto degli step ...
+      - name: Set up Python 3.13
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
+      - name: Install toml library
+        run: pip install toml
+      - name: Generate platform-specific pyproject.toml
+        run: python scripts/generate_pyproject_toml.py pyproject.toml ${{ runner.os | lower }} > pyproject.toml.tmp && mv pyproject.toml.tmp pyproject.toml
+      - name: Install Poetry
+        run: pip install poetry
+      - name: Install build dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y dpkg-dev debhelper build-essential python3-all python3-poetry-core dh-python python3-sphinx
+      - name: Remove Makefile to prevent conflicts
+        run: rm -f Makefile
       - name: Build Debian package
         run: |
           cp -r packaging/debian .
@@ -87,7 +143,6 @@ jobs:
           path: dist/deb/*.deb
 
   build-package:
-    # Questo job rimane attivo
     name: Build Pyinstaller Pkg
     strategy:
       matrix:
@@ -96,7 +151,39 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      # ... resto degli step ...
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
+      - name: Install toml library
+        run: pip install toml
+      - name: Generate platform-specific pyproject.toml
+        run: python scripts/generate_pyproject_toml.py pyproject.toml ${{ runner.os | lower }} > pyproject.toml.tmp && mv pyproject.toml.tmp pyproject.toml
+      - name: Install wxPython (Windows & macOS)
+        if: runner.os == 'Windows' || runner.os == 'macOS'
+        run: pip install wxpython==4.2.3
+      - name: Install OS-specific dependencies (Linux)
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            libnotify-dev \
+            libgtk-3-dev \
+            libwebkit2gtk-4.1-dev \
+            libxtst-dev \
+            xvfb \
+            libegl1 \
+            python3-gi \
+            python3-gi-cairo \
+            python3-wxgtk4.0 \
+            python3-wxgtk-webview4.0
+      - name: Install Poetry and dependencies
+        run: |
+          pip install poetry
+          poetry self add poetry-plugin-export
+          poetry lock
+          poetry export -f requirements.txt --output requirements.txt
+          pip install -r requirements.txt
       - name: Build Package
         run: |
           if [ "${{ runner.os }}" == "macOS" ]; then
@@ -113,13 +200,40 @@ jobs:
           path: dist/${{ matrix.os }}/
 
   build-docs:
-    if: false # << RIPRISTINATO COME RICHIESTO
+    if: false
     name: Build Documentation
     runs-on: ubuntu-24.04
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      # ... resto degli step ...
+      - name: Set up Python 3.13
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
+      - name: Install toml library
+        run: pip install toml
+      - name: Generate platform-specific pyproject.toml
+        run: python scripts/generate_pyproject_toml.py pyproject.toml ${{ runner.os | lower }} > pyproject.toml.tmp && mv pyproject.toml.tmp pyproject.toml
+      - name: Install Poetry and Export Plugin
+        run: |
+          pip install poetry
+          poetry self add poetry-plugin-export
+      - name: Install system dependencies for wxPython
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.1-dev libxtst-dev libnotify-dev \
+          python3-gi \
+          python3-gi-cairo \
+          python3-wxgtk4.0 \
+          python3-wxgtk-webview4.0
+      - name: Install dependencies and project
+        env:
+          PIP_FIND_LINKS: "https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-24.04/"
+        run: |
+          poetry lock
+          poetry export --with doc -f requirements.txt --output requirements.txt --without-hashes
+          pip install -r requirements.txt
+          pip install -e .
       - name: Build documentation with user script
         run: |
           chmod +x generate_sphinx_doc.sh
@@ -131,7 +245,7 @@ jobs:
           path: "build/html"
 
   deploy-docs:
-    if: false # << RIPRISTINATO COME RICHIESTO
+    if: false
     name: Deploy Documentation to GitHub Pages
     needs: build-docs
     runs-on: ubuntu-latest
@@ -156,7 +270,7 @@ jobs:
         uses: actions/deploy-pages@v4
 
   build-rpm-package:
-    if: false # << RIPRISTINATO COME RICHIESTO
+    if: false
     name: Build RPM Package
     runs-on: ubuntu-latest
     container:
@@ -164,7 +278,23 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      # ... resto degli step ...
+      - name: Install toml library
+        run: pip install toml
+      - name: Generate platform-specific pyproject.toml
+        run: |
+          cp pyproject.toml pyproject.toml.bak
+          python scripts/generate_pyproject_toml.py pyproject.toml ${{ runner.os | lower }} > pyproject.toml.tmp && mv pyproject.toml.tmp pyproject.toml
+      - name: Install RPM build tools and Python packages
+        run: |
+          dnf install -y rpm-build rpmlint python3-devel python3-setuptools python3-pip python3-wheel pyproject-rpm-macros poetry
+      - name: Create source tarball
+        run: |
+          mkdir -p ~/rpmbuild/SOURCES/
+          poetry build --format sdist
+          mv dist/*.tar.gz ~/rpmbuild/SOURCES/
+      - name: Restore original pyproject.toml
+        if: always()
+        run: mv pyproject.toml.bak pyproject.toml
       - name: Build RPM package
         run: |
           VERSION=$(poetry version --short)
@@ -179,21 +309,13 @@ jobs:
     name: Create and Upload Release
     runs-on: ubuntu-latest
     needs:
-      # NOTA: Le dipendenze per i job disabilitati sono state commentate.
-      # Rimuovi il commento quando riattivi il job corrispondente.
-      # - build-linux-wheel
-      # - build-macos-wheel
-      - build-windows-wheel # Attivo
-      # - build-deb-package
-      - build-package # Attivo
-      # - build-docs
-      # - build-rpm-package
+      - build-windows-wheel
+      - build-package
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
       - name: Calculate Next Version
         id: calculate_version
         env:
@@ -214,17 +336,14 @@ jobs:
           NEXT_VERSION="$major.$minor.$patch"
           echo "Calculated next version: $NEXT_VERSION"
           echo "next_version=$NEXT_VERSION" >> "$GITHUB_OUTPUT"
-
       - name: Download all artifacts
         if: steps.calculate_version.outputs.next_version != 'null'
         uses: actions/download-artifact@v4
         with:
           path: dist
-
       - name: Display downloaded artifacts structure
         if: steps.calculate_version.outputs.next_version != 'null'
         run: ls -R dist
-
       - name: Create Release
         id: create_release
         if: steps.calculate_version.outputs.next_version != 'null'
@@ -237,14 +356,11 @@ jobs:
           body: "Release v${{ steps.calculate_version.outputs.next_version }}"
           draft: false
           prerelease: false
-
       - name: Upload Release Assets
         if: steps.calculate_version.outputs.next_version != 'null'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # NOTA: Questo script caricherà solo gli artefatti dei job ATTIVI.
-          # Gli artefatti dei job con "if: false" non esisteranno e quindi non verranno caricati.
           find dist -type f -print0 | while IFS= read -r -d $'\0' file; do
             echo "Uploading asset: $file"
             gh release upload v${{ steps.calculate_version.outputs.next_version }} "$file"
