--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -15,20 +15,14 @@ permissions:
 
 jobs:
   build-linux-wheel:
-    if: false
-    name: Build Linux Wheel
-    runs-on: ubuntu-24.04
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Set up Python 3.13
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.13"
-      - name: Install toml library
-        run: pip install toml
       - name: Generate platform-specific pyproject.toml
-        run: python scripts/generate_pyproject_toml.py pyproject.toml ${{ runner.os }} > pyproject.toml.tmp && mv -Force pyproject.toml.tmp pyproject.toml
+        run: |
+          python scripts/generate_pyproject_toml.py pyproject.toml ${{ runner.os }} > pyproject.toml.tmp
+          if [ "${{ runner.os }}" == "Windows" ]; then
+            mv -Force pyproject.toml.tmp pyproject.toml
+          else
+            mv -f pyproject.toml.tmp pyproject.toml
+          fi
       - name: Install Poetry and Export Plugin
         run: |
           pip install poetry
@@ -70,12 +64,14 @@ jobs:
       - name: Install toml library
         run: pip install toml
       - name: Generate platform-specific pyproject.toml
-        run: python scripts/generate_pyproject_toml.py pyproject.toml ${{ runner.os }} > pyproject.toml.tmp && mv -Force pyproject.toml.tmp pyproject.toml
-      - name: Install Poetry and Export Plugin
         run: |
-          pip install poetry
-          poetry self add poetry-plugin-export
-      - name: Build Wheel
+          python scripts/generate_pyproject_toml.py pyproject.toml ${{ runner.os }} > pyproject.toml.tmp
+          if [ "${{ runner.os }}" == "Windows" ]; then
+            mv -Force pyproject.toml.tmp pyproject.toml
+          else
+            mv -f pyproject.toml.tmp pyproject.toml
+          fi
+      - name: Install Poetry and Export Plugin
         run: poetry build --format wheel
       - name: Upload Wheel Artifact
         uses: actions/upload-artifact@v4
@@ -85,18 +81,16 @@ jobs:
 
   build-windows-wheel:
     name: Build Windows Wheel
-    runs-on: windows-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Set up Python 3.13
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.13"
       - name: Install toml library
         run: pip install toml
       - name: Generate platform-specific pyproject.toml
-        run: python scripts/generate_pyproject_toml.py pyproject.toml ${{ runner.os }} > pyproject.toml.tmp && mv -Force pyproject.toml.tmp pyproject.toml
+        run: |
+          python scripts/generate_pyproject_toml.py pyproject.toml ${{ runner.os }} > pyproject.toml.tmp
+          if [ "${{ runner.os }}" == "Windows" ]; then
+            mv -Force pyproject.toml.tmp pyproject.toml
+          else
+            mv -f pyproject.toml.tmp pyproject.toml
+          fi
       - name: Install Poetry
         run: pip install poetry
       - name: Build Wheel
@@ -121,7 +115,13 @@ jobs:
       - name: Install toml library
         run: pip install toml
       - name: Generate platform-specific pyproject.toml
-        run: python scripts/generate_pyproject_toml.py pyproject.toml ${{ runner.os }} > pyproject.toml.tmp && mv -Force pyproject.toml.tmp pyproject.toml
+        run: |
+          python scripts/generate_pyproject_toml.py pyproject.toml ${{ runner.os }} > pyproject.toml.tmp
+          if [ "${{ runner.os }}" == "Windows" ]; then
+            mv -Force pyproject.toml.tmp pyproject.toml
+          else
+            mv -f pyproject.toml.tmp pyproject.toml
+          fi
       - name: Install Poetry
         run: pip install poetry
       - name: Install build dependencies
@@ -158,7 +158,13 @@ jobs:
       - name: Install toml library
         run: pip install toml
       - name: Generate platform-specific pyproject.toml
-        run: python scripts/generate_pyproject_toml.py pyproject.toml ${{ runner.os }} > pyproject.toml.tmp && mv -Force pyproject.toml.tmp pyproject.toml
+        run: |
+          python scripts/generate_pyproject_toml.py pyproject.toml ${{ runner.os }} > pyproject.toml.tmp
+          if [ "${{ runner.os }}" == "Windows" ]; then
+            mv -Force pyproject.toml.tmp pyproject.toml
+          else
+            mv -f pyproject.toml.tmp pyproject.toml
+          fi
       - name: Install wxPython (Windows & macOS)
         if: runner.os == 'Windows' || runner.os == 'macOS'
         run: pip install wxpython==4.2.3
@@ -213,7 +219,13 @@ jobs:
       - name: Install toml library
         run: pip install toml
       - name: Generate platform-specific pyproject.toml
-        run: python scripts/generate_pyproject_toml.py pyproject.toml ${{ runner.os }} > pyproject.toml.tmp && mv -Force pyproject.toml.tmp pyproject.toml
+        run: |
+          python scripts/generate_pyproject_toml.py pyproject.toml ${{ runner.os }} > pyproject.toml.tmp
+          if [ "${{ runner.os }}" == "Windows" ]; then
+            mv -Force pyproject.toml.tmp pyproject.toml
+          else
+            mv -f pyproject.toml.tmp pyproject.toml
+          fi
       - name: Install Poetry and Export Plugin
         run: |
           pip install poetry
@@ -283,7 +295,12 @@ jobs:
       - name: Generate platform-specific pyproject.toml
         run: |
           cp pyproject.toml pyproject.toml.bak
-          python scripts/generate_pyproject_toml.py pyproject.toml ${{ runner.os }} > pyproject.toml.tmp && mv -Force pyproject.toml.tmp pyproject.toml
+          python scripts/generate_pyproject_toml.py pyproject.toml ${{ runner.os }} > pyproject.toml.tmp
+          if [ "${{ runner.os }}" == "Windows" ]; then
+            mv -Force pyproject.toml.tmp pyproject.toml
+          else
+            mv -f pyproject.toml.tmp pyproject.toml
+          fi
       - name: Install RPM build tools and Python packages
         run: |
           dnf install -y rpm-build rpmlint python3-devel python3-setuptools python3-pip python3-wheel pyproject-rpm-macros poetry
