--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -17,6 +17,8 @@ jobs:
   build-linux-wheel:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
       - name: Generate platform-specific pyproject.toml
         run: |
           python scripts/generate_pyproject_toml.py pyproject.toml ${{ runner.os }} > pyproject.toml.tmp
@@ -83,18 +85,10 @@ jobs:
 
   build-windows-wheel:
     name: Build Windows Wheel
-    runs-on: windows-latest
-    steps:
-      - name: Install toml library
-        run: pip install toml
       - name: Generate platform-specific pyproject.toml
         run: |
           python scripts/generate_pyproject_toml.py pyproject.toml ${{ runner.os }} > pyproject.toml.tmp
-          if [ "${{ runner.os }}" == "Windows" ]; then
-            mv -Force pyproject.toml.tmp pyproject.toml
-          else
-            mv -f pyproject.toml.tmp pyproject.toml
-          fi
+          mv -Force pyproject.toml.tmp pyproject.toml
       - name: Install Poetry
         run: pip install poetry
       - name: Build Wheel
@@ -191,9 +185,7 @@ jobs:
         run: |
           pip install poetry
           poetry self add poetry-plugin-export
-          poetry lock
-          poetry export -f requirements.txt --output requirements.txt
-          pip install -r requirements.txt
+          poetry export -f requirements.txt | grep -v "wxPython" > requirements.txt
       - name: Build Package
         run: |
           if [ "${{ runner.os }}" == "macOS" ]; then
