--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -23,6 +23,8 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.13"
+      - name: Install Poetry
+        run: pip install poetry
       - name: Install toml library
         run: pip install toml
       - name: Generate platform-specific pyproject.toml
@@ -94,6 +96,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      - name: Install toml library
+        run: pip install toml
       - name: Generate platform-specific pyproject.toml
         run: |
           python scripts/generate_pyproject_toml.py pyproject.toml ${{ runner.os }} > pyproject.toml.tmp
@@ -162,6 +166,8 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.13"
+      - name: Install Poetry
+        run: pip install poetry
       - name: Install toml library
         run: pip install toml
       - name: Generate platform-specific pyproject.toml
