--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -15,6 +15,8 @@ permissions:
 
 jobs:
   build-linux-wheel:
+    if: false
+    name: Build Linux Wheel
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
