--- a/.github/workflows/test-packaged-app.yml
+++ b/.github/workflows/test-packaged-app.yml
@@ -37,9 +37,9 @@ jobs:
           }
 
   test-macos-pyinstaller-bundle:
-    if: false
     name: Test macOS PyInstaller Bundle
     runs-on: macos-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Download macOS artifact
         uses: actions/download-artifact@v4
@@ -70,6 +70,7 @@ jobs:
   test-linux-debian-package:
     name: Test Linux Debian Package
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Download Linux artifact
         uses: actions/download-artifact@v4
@@ -112,9 +113,9 @@ jobs:
           fi
 
   test-linux-wheel-package:
-    if: false
     name: Test Linux Wheel Package
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Download Linux Wheel artifact
         uses: actions/download-artifact@v4
@@ -142,6 +143,7 @@ jobs:
   test-windows-pyinstaller-bundle-pyinstaller-job:
     name: Test Windows PyInstaller Bundle (PyInstaller Job)
     runs-on: windows-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Download PyInstaller Windows bundle
         uses: actions/download-artifact@v4
@@ -169,6 +171,7 @@ jobs:
   test-macos-pyinstaller-bundle-pyinstaller-job:
     name: Test macOS PyInstaller Bundle (PyInstaller Job)
     runs-on: macos-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Download PyInstaller macOS bundle
         uses: actions/download-artifact@v4
@@ -198,6 +201,7 @@ jobs:
   test-linux-pyinstaller-bundle:
     name: Test Linux PyInstaller Bundle
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Download PyInstaller Linux bundle
         uses: actions/download-artifact@v4
@@ -229,6 +233,7 @@ jobs:
   test-rpm-package:
     name: Test RPM Package
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     container:
       image: fedora:latest
     steps:
