--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -38,6 +38,7 @@ jobs:
           fi
       - name: Install Poetry and Export Plugin
         run: |
+          export PATH="/home/runner/.poetry/bin:$PATH"
           poetry self add poetry-plugin-export
       - name: Install system dependencies for wxPython
         run: |
@@ -83,7 +84,10 @@ jobs:
             mv -f pyproject.toml.tmp pyproject.toml
           fi
       - name: Install Poetry and Export Plugin
-        run: poetry build --format wheel
+        run: |
+          pip install poetry
+          export PATH="/Users/runner/.poetry/bin:$PATH"
+          poetry build --format wheel
       - name: Upload Wheel Artifact
         uses: actions/upload-artifact@v4
         with:
@@ -96,14 +100,20 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      - name: Set up Python 3.13
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
       - name: Install toml library
-        run: pip install toml
+        run: python -m pip install toml
       - name: Generate platform-specific pyproject.toml
         run: |
           python scripts/generate_pyproject_toml.py pyproject.toml ${{ runner.os }} > pyproject.toml.tmp
           mv -Force pyproject.toml.tmp pyproject.toml
       - name: Install Poetry
-        run: pip install poetry
+        run: python -m pip install poetry
+      - name: Add Poetry to PATH
+        run: echo "$HOME/AppData/Local/pypoetry/Cache/virtualenvs/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
       - name: Build Wheel
         run: poetry build --format wheel
       - name: Upload Wheel Artifact
@@ -137,7 +147,7 @@ jobs:
       - name: Install build dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y dpkg-dev debhelper build-essential python3-all python3-poetry-core dh-python python3-sphinx
+          sudo apt-get install -y dpkg-dev debhelper build-essential python3-all python3-poetry-core dh-python python3-sphinx python3-pip
       - name: Remove Makefile to prevent conflicts
         run: rm -f Makefile
       - name: Build Debian package
@@ -301,8 +311,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Install toml library
-        run: pip install toml
       - name: Generate platform-specific pyproject.toml
         run: |
           cp pyproject.toml pyproject.toml.bak
@@ -315,6 +323,7 @@ jobs:
       - name: Install RPM build tools and Python packages
         run: |
           dnf install -y rpm-build rpmlint python3-devel python3-setuptools python3-pip python3-wheel pyproject-rpm-macros poetry
+          pip install toml
       - name: Create source tarball
         run: |
           mkdir -p ~/rpmbuild/SOURCES/
